# Abandonment-Scanner

./: .env.example  .gitignore  API.md  CHANGELOG.md  CONTRIBUTING.md  FEATURES.md  INSTALL.md  README.md  package-lock.json  package.json  tsconfig.base.json
client/: index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
client/src/: App.js  App.tsx  index.css  main.js  main.tsx
client/src/api/: client.js  client.ts
client/src/components/: Button.js  Button.tsx  Dropdown.jsx  Header.jsx  LoadingSkeleton.js  LoadingSkeleton.tsx  Navbar.jsx  Panel.js  Panel.tsx  StatusBadge.js  StatusBadge.tsx  ToastViewport.js  ToastViewport.tsx
client/src/hooks/: useToast.js  useToast.tsx
client/src/lib/: router.js  router.tsx
client/src/pages/: About.jsx  Docs.jsx  Download.jsx  Legal.jsx
client/src/styles/: globals.css
client/src/types/: jsx-modules.d.ts  leaflet.d.ts
client/src/utils/: map.js  map.ts
docs/: ARCHITECTURE.md
server/: .env.example  package.json  tsconfig.json
server/src/: index.ts
server/src/config/: env.ts
server/src/data/: seedBuildings.ts
server/src/db/: database.ts  sqlite.ts
server/src/routes/: api.ts  signals.ts
server/src/services/: analyzer.ts  buildingService.ts  geocodingService.ts  placeIntelligenceService.ts  routingService.ts
server/src/utils/: geo.ts
shared/: package.json  tsconfig.json
shared/src/: index.ts  scoring.js  scoring.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+16 files in other folders)
