[package]
name = "abandonment-scanner-desktop"
version = "1.0.0"
description = "Desktop wrapper for the Abandonment Scanner operational dashboard."
authors = ["Abandonment Scanner"]
edition = "2021"

[lib]
name = "abandonment_scanner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
